fixed cyrcle on window bottom overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,6 +33,7 @@
 }
 
 .mouse-cyrcle {
+    overflow: hidden;
     pointer-events: none;
     z-index: 2;
     border: 3px solid black;
@@ -43,8 +44,8 @@
     box-shadow: 0px 0px 6px 2px inset white;
     border-radius: 50%;
     position: absolute;
-    left: -50px;
-    top: -50px;
+    left: -60px;
+    top: -60px;
     opacity: 0;
 }
 
